--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dark-theme-switch",
+  "homepage": "https://materialuidarklighttheme.herokuapp.com/",
   "version": "1.0.0",
   "description": "a concept layout for dark themes utilizing material-ui dashboard",
   "keywords": [
